@@ -205,9 +205,6 @@
       <keyword>unlink</keyword>
       <keyword>unregister</keyword>
       <keyword>whereis</keyword>
-      <keyword></keyword>
-      <keyword></keyword>
-      <keyword></keyword>
     </context>
 
     <context id="compiler-directives" style-ref="compiler-directive">
